# seafile-ragflow-connector

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CODEX_PROJECT_READINESS.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.en.md  SECURITY.md  SUPPORT.en.md  SUPPORT.md  alembic.ini  connector.env.example  goal.md  pyproject.toml  stack.env.example
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: codeql.yml  docker.yml  release-artifact.yml  test.yml
deploy/: README.md
deploy/certs/: README.md
deploy/compose/: README.md  bundled-state.compose.yml  connector-top-secret.compose.yml  docker-compose.tls-example.yml  enterprise-ca.compose.yml  external-services.compose.yml  external-services.stack.env.example  external-state.compose.yml  local-mocks.compose.yml  openwebui.compose.yml  openwebui.stack.env.example  search.compose.yml  shared-network.compose.yml  shared-network.stack.env.example
deploy/compose/nginx/: connector-top-secret.conf  search-top-secret.conf
deploy/docker/: Dockerfile  README.md  entrypoint.sh
deploy/portainer/: README.md  docker-compose.yml  stack.env.example
deploy/swarm/: README.md  bundled-state.yml  docker-stack.yml  external-state.yml  search.yml  stack.env.example
deploy/tls-lab/: README.md  docker-compose.yml  generate-certs.ps1  generate-certs.sh  generate_certs.py  https_mock.py  probe_tls.py
docs/: FAQ.md  MAINTAINER_CHECKLIST.md  README.md  RELEASE_PROCESS.md  access-control.md  admin-first-start-checklist.md  architecture.md  configuration.md  demo-recording.md  docker-compose-tls.md  environment.md  https-edge-testbed.md  i18n.md  local-https-compose.md  manual-workflow-verification.md  offline-deployment.md  openwebui-acl.md  operations.md  portainer.md  ragflow-template.md  recovery.md  release.md  search-service.md  security-model.md  testing.md  tls-certificates.md  tls-topology.md  troubleshooting-ssl.md  troubleshooting.md
docs/assets/demo/: seafile-ragflow-openwebui-normal-content-chat.webm
docs/de/: index.md
docs/en/: admin-first-start-checklist.md  demo-recording.md  i18n.md  index.md  manual-workflow-verification.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial_state.py  0002_dashboard_state.py  0003_openwebui_integration_state.py  0004_acl_search_profiles.py  0005_sync_job_deduplication.py  0006_sync_consistency_state.py  0007_dashboard_admin_control.py
scripts/: configure-enterprise-compose.sh  obs_webhook_bridge.py  playwright_dashboard_smoke.py  playwright_search_smoke.py  record_demo_workflow.py  record_real_chrome_demo.py  validate_deployment_env.py  verify.py  verify_wsl.sh
src/: README.md
src/seafile_ragflow_connector/: README.md  __init__.py  cli.py  config.py  i18n.py  logging.py
src/seafile_ragflow_connector/app/: __init__.py  cli.py  health.py  logging.py  metrics.py  runtime.py  transport.py
src/seafile_ragflow_connector/clients/: __init__.py  http.py  openwebui.py  ragflow.py  seafile_admin.py  seafile_sync.py  tls.py
src/seafile_ragflow_connector/config/: __init__.py  inventory.py  settings.py
src/seafile_ragflow_connector/dashboard/: __init__.py  export.py  health.py  logging.py  server.py  store.py  ui.py
src/seafile_ragflow_connector/demo/: __init__.py  fixtures.py  lifecycle.py  recording.py
src/seafile_ragflow_connector/domain/: __init__.py  file_classification.py  ingestion_artifacts.py  naming.py  ragflow_defaults.py  ragflow_search_settings.py  settings_policy.py  template_payload_builder.py
src/seafile_ragflow_connector/jobs/: __init__.py  broker.py  context.py  job_store.py  scheduler.py  types.py  worker.py
src/seafile_ragflow_connector/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pl.json  pt.json  tr.json  uk.json  zh.json
src/seafile_ragflow_connector/models/: __init__.py  file.py  job.py  library.py  template.py
src/seafile_ragflow_connector/openwebui/: __init__.py  artifacts.py  sources.py  sync.py
src/seafile_ragflow_connector/persistence/: __init__.py  admin_control.py  db.py  sync_state.py
tests/: README.md
tests/integration/: test_manual_workflow.py
tests/unit/: test_dataset_naming.py  test_delta_sync.py  test_deployment_healthchecks.py  test_deployment_profiles.py  test_enterprise_compose_wizard.py  test_file_classification.py  test_i18n.py  test_ingestion_artifacts.py  test_job_store.py  test_release_metadata.py  test_retry.py  test_settings_policy.py  test_settings_tls.py  test_template_payload_builder.py  test_verify_script.py
(+108 files in other folders)
