[project]
name = "seafile-ragflow-connector"
version = "0.1.0"
description = "Offline-first Seafile to RAGFlow sync orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Seafile RAGFlow Connector Maintainers" }
]
keywords = [
  "seafile",
  "ragflow",
  "openwebui",
  "portainer",
  "docker-compose",
  "sync",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "alembic>=1.13",
  "dramatiq[redis]>=1.17",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "structlog>=24.1",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "cryptography>=48.0.0",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.15.14",
]

[project.scripts]
connector = "seafile_ragflow_connector.app.cli:app"

[project.urls]
Repository = "https://github.com/adrianweidig/seafile-ragflow-connector"
Issues = "https://github.com/adrianweidig/seafile-ragflow-connector/issues"
Documentation = "https://github.com/adrianweidig/seafile-ragflow-connector/tree/master/docs"
"Docker image" = "https://github.com/adrianweidig/seafile-ragflow-connector/pkgs/container/seafile-ragflow-connector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seafile_ragflow_connector"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["seafile_ragflow_connector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "cryptography>=48.0.0",
]
