[project]
name = "seafile-ragflow-connector"
version = "2.6.2"
description = "Offline-fähiger Seafile-zu-RAGFlow-Sync-Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Seafile RAGFlow Connector Maintainers" }
]
keywords = [
  "seafile",
  "ragflow",
  "openwebui",
  "portainer",
  "docker-compose",
  "sync",
  "rag",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "alembic>=1.13",
  "dramatiq[redis]>=2.2.0",
  "httpx>=0.27",
  "pillow>=11.0",
  "prometheus-client>=0.20",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.14.2",
  "pypdfium2>=4.30",
  "python-multipart>=0.0.32",
  "redis>=8.0.1",
  "sqlalchemy>=2.0.50",
  "structlog>=26.1.0",
  "typer>=0.26.7",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "cryptography>=49.0.0",
  "mypy>=1.10",
  "playwright>=1.59",
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "respx>=0.21",
  "ruff>=0.15.17",
]
demo-recording = [
  "numpy>=2.1",
  "opencv-python>=4.10",
  "pillow>=11.0",
]

[project.scripts]
connector = "seafile_ragflow_connector.app.cli:app"

[project.urls]
Repository = "https://github.com/adrianweidig/seafile-ragflow-connector"
Issues = "https://github.com/adrianweidig/seafile-ragflow-connector/issues"
Documentation = "https://github.com/adrianweidig/seafile-ragflow-connector/tree/master/docs"
"Docker image" = "https://github.com/adrianweidig/seafile-ragflow-connector/pkgs/container/seafile-ragflow-connector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seafile_ragflow_connector"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "seafile_ragflow_connector/migrations"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["seafile_ragflow_connector"]

[tool.coverage.run]
branch = true
source = ["seafile_ragflow_connector"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
